<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_connections"
        android:title="@string/action_connections"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tmux_sessions"
        android:title="@string/action_tmux"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_instructions"
        android:title="@string/action_instructions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />

</menu>
